--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="sign_in">Sign In</string>
     <string name="log_in">Log In</string>
     <string name="sign_out">Sign Out</string>
+    <string name="title_adminaction_list">AdminActions</string>
+    <string name="title_adminaction_detail">AdminAction Detail</string>
+    <string name="title_subscriberaction_list">SubscriberActions</string>
+    <string name="title_subscriberaction_detail">SubscriberAction Detail</string>
 </resources>
