implement admin's add subscriber command

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_adminaction_detail">AdminAction Detail</string>
     <string name="title_subscriberaction_list">SubscriberActions</string>
     <string name="title_subscriberaction_detail">SubscriberAction Detail</string>
+    <string name="add_subscriber">Add Subscriber</string>
 </resources>
