--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="phone_number">Phone number</string>
     <string name="title_activity_subscriber_action">SubscriberActionActivity</string>
     <string name="update_status">Update Status</string>
+    <string name="admin_password">Admin Password</string>
+    <string name="new_password">New Password</string>
+    <string name="re_type_password">Retype Password</string>
+    <string name="user">User</string>
 </resources>
