Add wifi connection dialog for input ap and its password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="phone_number">Phone number</string>
     <string name="title_activity_subscriber_action">SubscriberActionActivity</string>
     <string name="update_status">Update Status</string>
+    <string name="access_point">Access Point</string>
+    <string name="password">Password</string>
 
     <string-array name="wifi_commands">
         <item>Wifi Ap Inquiry</item>
