Support Wifi Inquiry and Wifi Connection Command

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="update_status">Update Status</string>
     <string name="access_point">Access Point</string>
     <string name="password">Password</string>
+    <string name="status">Status:</string>
 
     <string-array name="wifi_commands">
         <item>Wifi Ap Inquiry</item>
